attempt add host actions with custom gcode funcs

--- a/Copy to SD Card root directory to update/Language Packs/language_en.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_en.ini
@@ -156,6 +156,7 @@ label_usb_disk_not_detected:No USB Disk detected.
 label_onboardsd:OnboardSD
 label_read_onboardsd_error:Read Onboard SD card error!
 label_filament_runout:Filament runout!
+label_host_start:Host start
 label_disable_steppers:Disarm All
 label_xy_unlock:Disarm XY
 label_start_print:Start Printing:\n%s?
@@ -266,6 +267,7 @@ label_load_unload_short:(Un)Load
 label_touchscreen_adjust:TSC Adjust
 label_more:More
 label_screen_info:Info
+label_octoprint:Host start
 label_bg_color:Background color
 label_font_color:Font color
 label_percentage:Percentage
